--- a/ziga.css
+++ b/ziga.css
@@ -6,8 +6,7 @@ html {
 }
 body {
 	position: relative;
-	margin: auto;
-	background: #181620;
+	background: rgb(255, 255, 255);
 	perspective: 500px;
 }
 
@@ -18,14 +17,17 @@ main {
 	animation: rotateAngle 6s linear infinite;
 }
 
-button {
+.button{
 	display: block;
 	position: relative;
 	margin: 0.5em 0;
 	padding: .8em 2.2em;
 	cursor: pointer;
 
-	background: #FFFFFF;
+	margin-left: 800px;
+	margin-top: -400px;
+
+	background: blue;
 	border: none;
 	border-radius: .4em;
 
@@ -73,7 +75,7 @@ button {
 	}
 	
 	&:hover {
-		background-color: #FFF65B;
+		background-color: #a23535;
 		transition: background .3s 0.1s;
 	}
 	
@@ -169,4 +171,209 @@ button {
 			calc(var(--z) * 100px)
 		);
   }
+}
+@font-face {
+	font-family: my-font;
+	src: url(RussoOne-Regular.ttf);
+}
+
+
+
+h1{
+	color: rgb(125, 120, 120);
+	width: 700px;
+	border: black;
+
+	border-radius: .2em;
+	font-size: 140px;
+	font-family: "my-font";
+	text-align: center;
+	margin-top: 0px;
+	margin-left: 550px;
+
+
+}
+.plast1{
+	background-color: #ffffff;
+	color: #ffffff;
+	width:1900px;
+	height: 1000px;
+	border: 1px solid #ccc;
+}
+.plast3{
+	background-color: gray;
+	width: 640px;
+	height: 700px;
+	margin-top:550px;
+	margin-left: 200px;
+
+}
+.plast2{
+	background-image: url(audi.drving.gif);
+	width: 600px;
+	height: 245px;
+	margin-top: -350px;
+	margin-left: 250px;
+
+}
+.button1{
+	margin-left: 1200px;
+	display: block;
+	position: relative;
+	margin: 0.5em 0;
+	padding: .8em 2.2em;
+	cursor: pointer;
+
+	margin-left: 500px;
+	margin-top: -400px;
+
+	background: blue;
+	border: none;
+	border-radius: .4em;
+
+	text-transform: uppercase;
+	font-size: 1.4em;
+	font-family: "Work Sans", sans-serif;
+	font-weight: 500;
+	letter-spacing: 0.04em;
+
+	mix-blend-mode: color-dodge;
+	perspective: 500px;
+	transform-style: preserve-3d;
+
+	&:before, &:after {
+		--z: 0px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+		content: '';
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		mix-blend-mode: inherit;
+		border-radius: inherit;
+		transform-style: preserve-3d;
+		transform: translate3d(
+			calc(var(--z) * 0px), 
+			calc(var(--z) * 0px), 
+			calc(var(--z) * 0px)
+		);
+	}
+
+	& > span {
+		mix-blend-mode: none;
+		display: block;
+	}
+	
+	&:after {
+		background-color: #5D00FF;
+	}
+	
+	&:before {
+		background-color: #FF1731;
+	}
+	
+	&:hover {
+		background-color: #a23535;
+		transition: background .3s 0.1s;
+	}
+	
+	&:hover:before {
+		--z: 0.04;
+		animation: translateWobble 2.2s ease forwards;
+	}
+	
+	&:hover:after {
+		--z: -0.06;
+		animation: translateWobble 2.2s ease forwards;
+	}
+}
+
+@keyframes rotateAngle {
+	0% {
+		transform: rotateY(0deg) rotateX(10deg);
+		animation-timing-function: cubic-bezier(0.61, 1, 0.88, 1);
+	}
+	25% {
+		transform: rotateY(20deg) rotateX(10deg);
+	}
+	50% {
+		transform: rotateY(0deg) rotateX(10deg);
+		animation-timing-function: cubic-bezier(0.61, 1, 0.88, 1);
+	}
+	75% {
+		transform: rotateY(-20deg) rotateX(10deg);
+	}
+	100% {
+		transform: rotateY(0deg) rotateX(10deg);
+	}
+}
+
+@keyframes translateWobble {
+  0% {
+		opacity: 0;
+		transform: translate3d(
+			calc(var(--z) * 0px), 
+			calc(var(--z) * 0px), 
+			calc(var(--z) * 0px)
+		);
+  }
+  16% {
+		transform: translate3d(
+			calc(var(--z) * 160px), 
+			calc(var(--z) * 160px), 
+			calc(var(--z) * 160px)
+		);
+  }
+  28% {
+		opacity: 1;
+		transform: translate3d(
+			calc(var(--z) * 70px), 
+			calc(var(--z) * 70px), 
+			calc(var(--z) * 70px)
+		);
+  }
+  44% {
+		transform: translate3d(
+			calc(var(--z) * 130px), 
+			calc(var(--z) * 130px), 
+			calc(var(--z) * 130px)
+		);
+  }
+  59% {
+		transform: translate3d(
+			calc(var(--z) * 85px), 
+			calc(var(--z) * 85px), 
+			calc(var(--z) * 85px)
+		);
+  }
+  73% {
+		transform: translate3d(
+			calc(var(--z) * 110px), 
+			calc(var(--z) * 110px), 
+			calc(var(--z) * 110px)
+		);
+  }
+	88% {
+		opacity: 1;
+		transform: translate3d(
+			calc(var(--z) * 90px), 
+			calc(var(--z) * 90px), 
+			calc(var(--z) * 90px)
+		);
+  }
+  100% {
+		opacity: 1;
+		transform: translate3d(
+			calc(var(--z) * 100px), 
+			calc(var(--z) * 100px), 
+			calc(var(--z) * 100px)
+		);
+  }
+}
+@font-face {
+	font-family: my-font;
+	src: url(RussoOne-Regular.ttf);
+}
 }
